fixing background on mobile

--- a/css/_body.scss
+++ b/css/_body.scss
@@ -35,7 +35,7 @@
 }
 
 .secondSection {
-      background: url(../assets/backgrounds/art-by-lonfeldt-592708-unsplash.jpg) no-repeat center fixed;
+      background: url(../assets/backgrounds/art-by-lonfeldt-592708-unsplash.jpg);
 }
 
 .colorShadow {
