--- a/css/master.css
+++ b/css/master.css
@@ -58,7 +58,7 @@
 }
 
 .secondSection {
-  background: url(../assets/backgrounds/art-by-lonfeldt-592708-unsplash.jpg) no-repeat center fixed;
+  background: url(../assets/backgrounds/art-by-lonfeldt-592708-unsplash.jpg);
 }
 
 .colorShadow {
